--- a/CafeManagement/CafeManagement.csproj
+++ b/CafeManagement/CafeManagement.csproj
@@ -9,12 +9,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="DAO\" />
+    <Compile Remove="Controllers\**" />
+    <Compile Remove="DAO\**" />
+    <EmbeddedResource Remove="Controllers\**" />
+    <EmbeddedResource Remove="DAO\**" />
+    <None Remove="Controllers\**" />
+    <None Remove="DAO\**" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
